<resources>
    <string name="app_name">TeaPot</string>
    <string name="TurnOfMode">ВЫКЛ</string>
    <string name="AutoMode">АВТО</string>
    <string name="HeatMode">НАГР</string>
    <string name="current_temperature_title">ТЕКУЩАЯ\nТЕМПЕРАТУРА</string>
    <string name="updatetemperaturesent">запрос обновления температуры был отослан</string>
    <string name="ResendCommandHeader">Повторная установка</string>
    <string name="ResendCommandBody">Режим уже установлен. Выполнить повторную установку?</string>
    <string name="ResendTemperatureHeader">Повторная установка</string>
    <string name="ResendTemperatureBody">Температура уже установлена. Выполнить повторную
        установку?</string>
    <string name="WiFiTurnOffHeader">WiFi выключен</string>
    <string name="WiFiTurnOffBody">Приложение будет работать в демо-режиме. Для полного режима
        включите WiFi и зайдите в приложение снова</string>
    <string name="WiFiNetworkAbsentHeader">Нет WiFi сети</string>
    <string name="WiFiNetworkAbsentBody">Приложение будет работать в демо-режиме. Для полного режима
        подключитесь к WiFi сети и зайдите в приложение снова</string>
    <string name="WiFiNetworkWrongHeader">Неверная WiFi сеть</string>
    <string name="WiFiNetworkWrongBody">Приложение будет работать в демо-режиме. Для полного режима
        подключитесь к WiFi сети с устройством и зайдите в приложение снова</string>
    <string name="dialogOkButton">OK</string>
    <string name="dialogCancelButton">CANCEL</string>
    <string name="TCPsendFail">Запрос обновления температуры и режима не был отослан.
        Проверьте устойство и WiFi сеть</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Домой</string>
    <string name="drawer_item_settings">Настойка Wi-Fi</string>
    <string name="drawer_item_temperature">Управление температурой</string>
    <string name="drawer_item_notifications">Уведомления</string>
    <string name="drawer_item_color_themes">Цветовые темы</string>
    <string name="drawer_item_send">Отправить данные</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="menu">Меню</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>

    <string name="WiFiNameTitle">SSID WiFi в которой находится устройство</string>
    <string name="WiFiIpAddressTitle">Текущий Ip адрес устройства в сети</string>

    <string name="NotificationModeChange">Включить оповещение об изменении режима</string>
    <string name="NotificationTemperatureChange">Включить оповещение об изменении
        температуры поддержания</string>
    <string name="NotificationSimmer">Включить оповещение когда чайник закипит</string>
    <string name="NotificationRington">Оповещать звуком SMS</string>
    <string name="NotificationVibration">Оповещать вибрацией</string>
    <string name="NotificationPush">Оповещать уведомлением</string>

    <string name="Theme1">Тема 1</string>
    <string name="Theme2">Тема 2</string>
    <string name="Theme3">Тема 3</string>

    <string name="MinLimit">Изменить минимальный порог температуры поддержания</string>
    <string name="MaxLimit">Изменить максимальный порог температуры поддержания</string>
    <string name="SetMinLimit">Установка минимального порога температуры</string>
    <string name="SetMaxLimit">Установка максимального порога температуры</string>

    <string name="SimmerNotificationTitle">Чайник закипел</string>
    <string name="SimmerNotification">Чайник закипел (удержание)</string>
    <string name="TempChangeNotificationTitle">Температура изменилась</string>
    <string name="TempChangeNotification">Температура поддержания изменилась</string>
    <string name="ModeChangeNotificationTitle">Режим изменился</string>
    <string name="ModeChangeNotification">Режим работы изменился</string>

    <string name="customnotificationtitle">Приложение TeaPot работает</string>
    <string name="customnotificationtext">Нажмите чтобы открыть</string>
</resources>
