<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/notifications_fragment"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/notificationSimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotificationSimmer"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:padding="10dp"/>

        <CheckBox
            android:id="@+id/notificationModeChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotificationModeChange"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:padding="10dp"/>

        <CheckBox
            android:id="@+id/notificationTemperatureChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NotificationTemperatureChange"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:padding="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/notificationRington"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotificationRington"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"/>

            <RadioButton
                android:id="@+id/notificationVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotificationVibration"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"/>

            <RadioButton
                android:id="@+id/notificationPush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NotificationPush"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"/>

    </RadioGroup>

    </LinearLayout>
</FrameLayout>