<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorBackGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="@color/colorTopGround">

        <TextView
            android:id="@+id/CurrentTemperatureTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="right"
            android:text="@string/current_temperature_title"
            style="?android:listChoiceBackgroundIndicator"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:text="25"
            style="?android:listChoiceBackgroundIndicator"
            tools:text="50.0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:layout_gravity="center"
            android:background="@color/colorBackGround"/>

        <TextView
            android:id="@+id/target_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="150dp"
            style="?android:listChoiceBackgroundIndicator"
            tools:text="50"/>

        <ImageButton
            android:id="@+id/arrow_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_right"
            android:layout_gravity="center"
            android:background="@color/colorBackGround"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/colorTopGround">

        <Button
            android:id="@+id/turn_off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/TurnOfMode"
            android:layout_gravity="center"
            android:background="@drawable/turn_off_button"/>

        <Button
            android:id="@+id/auto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/AutoMode"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:background="@drawable/turn_off_button"/>

        <Button
            android:id="@+id/heat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/HeatMode"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:background="@drawable/turn_off_button"/>
    </LinearLayout>

</FrameLayout>